--- a/docsqa/backend/requirements.txt
+++ b/docsqa/backend/requirements.txt
@@ -2,3 +2,24 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-dotenv==1.0.0
+sqlalchemy==2.0.23
+alembic==1.13.1
+psycopg[binary]==3.1.15
+httpx==0.25.2
+aiofiles==23.2.1
+PyYAML==6.0.1
+markdown==3.5.1
+python-frontmatter==1.0.0
+GitPython==3.1.40
+PyGithub==1.59.1
+openai==1.3.7
+faiss-cpu==1.7.4
+numpy==1.24.4
+tiktoken==0.5.2
+Pygments==2.17.2
+beautifulsoup4==4.12.2
+lxml==4.9.3
+cryptography==41.0.8
+PyJWT==2.8.0
+tenacity==8.2.3
+python-multipart==0.0.6
