--- a/docsqa/docker/Dockerfile.backend
+++ b/docsqa/docker/Dockerfile.backend
@@ -10,21 +10,15 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
-COPY backend/requirements.txt .
+# Copy setup script and run it
+COPY setup.sh /tmp/setup.sh
+COPY docsqa/ docsqa/
 
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy application code
-COPY backend/ .
-COPY configs/ configs/
-
-# Create data directory for repo clone
-RUN mkdir -p /data
+# Run setup script to install dependencies and initialize
+RUN chmod +x /tmp/setup.sh && /tmp/setup.sh
 
 # Set Python path
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/app/docsqa/backend
 
 # Expose port
 EXPOSE 8080
@@ -32,6 +26,9 @@ EXPOSE 8080
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:8080/health || exit 1
+
+# Set working directory to backend
+WORKDIR /app/docsqa/backend
 
 # Default command
 CMD ["python", "app.py"]
