--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,71 @@
+# Python
 __pycache__/
 *.py[cod]
-.env
+*$py.class
+*.so
+.Python
+env/
 venv/
 .venv/
+ENV/
+env.bak/
+venv.bak/
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Data directories
+data/
+.cache/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs/
+
+# OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Node.js (for future frontend)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+
+# Docker
+.dockerignore
+
+# Temporary files
+*.tmp
+*.temp
+
+# Alembic
+alembic/versions/*.py
+!alembic/versions/__init__.py
+
+# FAISS index files
+*.index
+*.faiss
