--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,23 @@ test = [
     "httpx>=0.25.0",  # For TestClient
 ]
 
+[dependency-groups]
+dev = [
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.1.0",
+    "black>=23.7.0",
+    "ruff>=0.0.284",
+    "mypy>=1.5.0",
+    "pre-commit>=3.3.0",
+]
+test = [
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.1.0",
+    "httpx>=0.25.0",  # For TestClient
+]
+
 [project.urls]
 Homepage = "https://github.com/lukas/doc-crawler"
 Repository = "https://github.com/lukas/doc-crawler"
